<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_appbar_new"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="170dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">


            <Button
                android:id="@+id/changeNickBtn"
                style="@style/AppTheme.OutlineButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:text="@string/did_manage_change_nick"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/setDefaultBtn"
                style="@style/AppTheme.OutlineButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:text="@string/did_manage_set_default_did"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changeNickBtn" />

            <Button
                android:id="@+id/detailBtn"
                style="@style/AppTheme.OutlineButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:text="@string/did_manage_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/setDefaultBtn" />

            <Button
                android:id="@+id/deleteBtn"
                style="@style/AppTheme.OutlineButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:text="@string/did_manage_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailBtn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/progresslayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B31E1F28"
            android:visibility="invisible">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:indeterminateTint="@color/tabTextSelect" />

        </RelativeLayout>

    </RelativeLayout>
</layout>