<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:background="@color/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_appbar_new" />

        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nicknameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/add_did_nick_title"
                android:textColor="@color/tabTextUnselect"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nicknameEt"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="20"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nicknameTitle"
                    tools:text="거래용 ID"
                    tools:ignore="Autofill,LabelFor,TextFields" />

                <Button
                    android:id="@+id/changeConfirmBtn"
                    style="@style/AppTheme.OutlineButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/did_change_change"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <EditText
                android:id="@+id/nickEditText"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/add_did_nick_hint"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/nicknameTitle"
                tools:layout_editor_absoluteX="20dp"
                tools:ignore="Autofill,TextFields" />



            <TextView
                android:id="@+id/BlockChainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_did_blockchain"
                android:textColor="@color/tabTextUnselect"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nickEditText" />

            <ImageView
                android:id="@+id/blockChainImage"
                android:layout_width="168dp"
                android:layout_height="28dp"
                android:background="@drawable/img_metadium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BlockChainTitle"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>
</layout>